# rrv

./: .gitignore  .justfile  CHANGELOG.md  Cargo.toml  README.md  Trunk.toml
.cargo/: config.toml
crates/rrv-core/: Cargo.toml
crates/rrv-core/src/: lib.rs
crates/rrv-core/src/parser/: datatypes.rs  mod.rs  types.rs
crates/rrv-models/: Cargo.toml
src/: dev_tools.rs  main.rs
web/: index.html  style.css
