[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0-dev"
edition = "2021"

[workspace.dependencies]
rrv-core = { path = "crates/rrv-core" }

# Common
rand = "0.8.5"
nom = "7.1.3"
env_logger = "0.11.5"
log = "0.4.22"
glam = "0.29.0"
strum = "0.26.3"
strum_macros = "0.26.4"

# Bevy deps
bevy = "0.14.0"
bevy_flycam = "0.14.0"
# leafwing-input-manager = "0.15.0"

[package]
name = "rrv"
description = "A (rust-ed) version of GTFO Replay Viewer"
version.workspace = true
edition.workspace = true

[dependencies]
rrv-core.workspace = true
rand.workspace = true
log.workspace = true
env_logger.workspace = true
bevy.workspace = true
bevy_flycam.workspace = true
# leafwing-input-manager.workspace = true


[features]
default = [
    # Default to a native dev build.
    "dev_native",
]
dev = [
    # Improve compile times for dev builds by linking Bevy as a dynamic library.
    "bevy/dynamic_linking",
]
dev_native = [
    "dev",
    # Enable asset hot reloading for native dev builds.
    "bevy/file_watcher",
    # Enable embedded asset hot reloading for native dev builds.
    "bevy/embedded_watcher",
]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.dev.package.wgpu-types]
debug-assertions = false

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = "z"
strip = "debuginfo"

[profile.release-native]
inherits = "release"
opt-level = 3
strip = "none"
